test/files/neg/t4137.check
t4137.scala:9: error: incompatible type in overriding
type EPC[X1] = C[X1] (defined in trait A)
   (Equivalent type required when overriding a type alias.)
  override type EPC = C[T]
                ^
t4137.scala:10: error: incompatible type in overriding
type EPC2[X1] = C[X1] (defined in trait A)
   (Equivalent type required when overriding a type alias.)
  override type EPC2[X1 <: String] = C[X1]
                ^
two errors found
